Fix footer spacing around icons.

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,11 +2,14 @@ div.Footer{
     background-color: #0c021b;
     margin-top: 20px;
     display: inline-block;
-    width: 400px;
-    height: 5px;
-    padding-bottom: 50px;
+    width: calc(100% - 8px);
+    height: max-content;
+    padding: 4px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 /* a.social {
@@ -20,26 +23,26 @@ a.Instagram{
     margin-left: 0px;
     margin-right: 30px;
     color: #261938;
-    padding-: 3px;
+    /* padding-: 3px; */
 }
 
 a.WhatsApp{
     margin-left: 0px;
     margin-right: 30px;
     color: #261938;
-    padding: 3px;
+    /* padding: 3px; */
 }
 
 a.GitHub{
     margin-left: 0px;
     margin-right: 30px;
     color: #261938;
-    padding: 3px;
+    /* padding: 3px; */
 }
 
 a.Facebook{
     margin-left: 0px;
     margin-right: 0px;
     color: #261938;
-    padding: 3px;
+    /* padding: 3px; */
 }
